fix ui/ux
