# core-service/src/main/resources/openapi/api-core-v1.yml
@@ -360,6 +360,33 @@ paths:
         '401':
           $ref: '#/components/responses/UnauthorizedError'
 
+  /routes/my/{id}:
+    get:
+      tags:
+        - routes
+      summary: Get current user's unpublished route details
+      operationId: getMyRouteById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: Current user's unpublished route details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RouteFullResponse'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+
   /routes/{id}:
     get:
       tags:
